cobc/test.output
Grammaire

    0 $accept: start $end

    1 start: sentences_list

    2 _is: ε
    3    | IS

    4 a: A _c

    5 b: _is B

    6 _c: ε
    7   | _is C

    8 sentence: a
    9         | b

   10 sentences_list: sentence
   11               | sentences_list sentence


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    IS (258) 3
    A (259) 4
    C (260) 7
    B (261) 5
    SHIFT_PREFER (262)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (8)
        à gauche: 0
    start (9)
        à gauche: 1
        à droite: 0
    _is (10)
        à gauche: 2 3
        à droite: 5 7
    a (11)
        à gauche: 4
        à droite: 8
    b (12)
        à gauche: 5
        à droite: 9
    _c (13)
        à gauche: 6 7
        à droite: 4
    sentence (14)
        à gauche: 8 9
        à droite: 10 11
    sentences_list (15)
        à gauche: 10 11
        à droite: 1 11


État 0

    0 $accept: • start $end

    IS  décalage et aller à l'état 1
    A   décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 2 (_is)

    start           aller à l'état 3
    _is             aller à l'état 4
    a               aller à l'état 5
    b               aller à l'état 6
    sentence        aller à l'état 7
    sentences_list  aller à l'état 8


État 1

    3 _is: IS •

    $défaut  réduction par utilisation de la règle 3 (_is)


État 2

    4 a: A • _c

    IS  décalage et aller à l'état 1

    C        réduction par utilisation de la règle 2 (_is)
    $défaut  réduction par utilisation de la règle 6 (_c)

    _is  aller à l'état 9
    _c   aller à l'état 10


État 3

    0 $accept: start • $end

    $end  décalage et aller à l'état 11


État 4

    5 b: _is • B

    B  décalage et aller à l'état 12


État 5

    8 sentence: a •

    $défaut  réduction par utilisation de la règle 8 (sentence)


État 6

    9 sentence: b •

    $défaut  réduction par utilisation de la règle 9 (sentence)


État 7

   10 sentences_list: sentence •

    $défaut  réduction par utilisation de la règle 10 (sentences_list)


État 8

    1 start: sentences_list •
   11 sentences_list: sentences_list • sentence

    IS  décalage et aller à l'état 1
    A   décalage et aller à l'état 2

    B        réduction par utilisation de la règle 2 (_is)
    $défaut  réduction par utilisation de la règle 1 (start)

    _is       aller à l'état 4
    a         aller à l'état 5
    b         aller à l'état 6
    sentence  aller à l'état 13


État 9

    7 _c: _is • C

    C  décalage et aller à l'état 14


État 10

    4 a: A _c •

    $défaut  réduction par utilisation de la règle 4 (a)


État 11

    0 $accept: start $end •

    $défaut  accepter


État 12

    5 b: _is B •

    $défaut  réduction par utilisation de la règle 5 (b)


État 13

   11 sentences_list: sentences_list sentence •

    $défaut  réduction par utilisation de la règle 11 (sentences_list)


État 14

    7 _c: _is C •

    $défaut  réduction par utilisation de la règle 7 (_c)
